--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -1,15 +1,15 @@
 @charset "EUC-KR";
 /* 폰트 */
 @import
-	url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-@import 
-	url('https://fonts.googleapis.com/css2?family=Newsreader&display=swap');
-@import 
-	url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
-@import 
-	url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 @import
-	url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+url('https://fonts.googleapis.com/css2?family=Newsreader&display=swap');
+@import
+url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
+@import
+url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+@import
+url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
 /* 네비바 */
 .nav {
@@ -27,13 +27,13 @@
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 .navbar-right {
-    right: 0;
-    left: auto;
-  }
+  right: 0;
+  left: auto;
+}
 .navbar-right {
-    right: auto;
-    left: 0;
-  }
+  right: auto;
+  left: 0;
+}
 
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
@@ -246,7 +246,7 @@
     transform: none;
   }
   .navbar-expand-sm .offcanvas-top,
-.navbar-expand-sm .offcanvas-bottom {
+  .navbar-expand-sm .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -299,7 +299,7 @@
     transform: none;
   }
   .navbar-expand-md .offcanvas-top,
-.navbar-expand-md .offcanvas-bottom {
+  .navbar-expand-md .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -352,7 +352,7 @@
     transform: none;
   }
   .navbar-expand-lg .offcanvas-top,
-.navbar-expand-lg .offcanvas-bottom {
+  .navbar-expand-lg .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -405,7 +405,7 @@
     transform: none;
   }
   .navbar-expand-xl .offcanvas-top,
-.navbar-expand-xl .offcanvas-bottom {
+  .navbar-expand-xl .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -458,7 +458,7 @@
     transform: none;
   }
   .navbar-expand-xxl .offcanvas-top,
-.navbar-expand-xxl .offcanvas-bottom {
+  .navbar-expand-xxl .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -936,32 +936,17 @@
   font-weight: 300;
   line-height: 1.2;
 }
-@media (min-width: 1200px) {
-  .display-1 {
-    font-size: 5rem;
-  }
-}
 
 .display-2 {
   font-size: calc(1.575rem + 3.9vw);
   font-weight: 300;
   line-height: 1.2;
 }
-@media (min-width: 1200px) {
-  .display-2 {
-    font-size: 4.5rem;
-  }
-}
 
 .display-3 {
   font-size: calc(1.525rem + 3.3vw);
   font-weight: 300;
   line-height: 1.2;
-}
-@media (min-width: 1200px) {
-  .display-3 {
-    font-size: 4rem;
-  }
 }
 
 .display-4 {
@@ -970,32 +955,11 @@
   line-height: 1.2;
   font-family: 'Gowun Dodum', sans-serif;
 }
-@media (min-width: 1200px) {
-  .display-4 {
-    font-size: 3.5rem;
-  }
-}
 
 .display-5 {
-  font-size: calc(1.425rem + 2.1vw);
-  font-weight: 300;
-  line-height: 1.2;
-}
-@media (min-width: 1200px) {
-  .display-5 {
-    font-size: 3rem;
-  }
-}
-
-.display-6 {
-  font-size: calc(1.375rem + 1.5vw);
-  font-weight: 300;
-  line-height: 1.2;
-}
-@media (min-width: 1200px) {
-  .display-6 {
-    font-size: 2.5rem;
-  }
+  font-size: 5px;
+  font-weight: 600;
+  font-family: 'Gowun Dodum', sans-serif;
 }
 
 /*메인 - header-slider*/
@@ -1025,7 +989,7 @@
   width: 100%;
   margin-right: -100%;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   transition: transform 0.6s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -1069,7 +1033,7 @@
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-fade .active.carousel-item-start,
-.carousel-fade .active.carousel-item-end {
+  .carousel-fade .active.carousel-item-end {
     transition: none;
   }
 }
@@ -1094,7 +1058,7 @@
 }
 @media (prefers-reduced-motion: reduce) {
   .carousel-control-prev,
-.carousel-control-next {
+  .carousel-control-next {
     transition: none;
   }
 }
@@ -1271,7 +1235,7 @@ section.cta:before {
 
 .card-title {
   margin-bottom: 0.5rem;
-  font-family:'Hahmlet', serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .card-subtitle {
@@ -1368,11 +1332,11 @@ section.cta:before {
     border-bottom-right-radius: 0;
   }
   .card-group > .card:not(:last-child) .card-img-top,
-.card-group > .card:not(:last-child) .card-header {
+  .card-group > .card:not(:last-child) .card-header {
     border-top-right-radius: 0;
   }
   .card-group > .card:not(:last-child) .card-img-bottom,
-.card-group > .card:not(:last-child) .card-footer {
+  .card-group > .card:not(:last-child) .card-footer {
     border-bottom-right-radius: 0;
   }
   .card-group > .card:not(:first-child) {
@@ -1380,30 +1344,50 @@ section.cta:before {
     border-bottom-left-radius: 0;
   }
   .card-group > .card:not(:first-child) .card-img-top,
-.card-group > .card:not(:first-child) .card-header {
+  .card-group > .card:not(:first-child) .card-header {
     border-top-left-radius: 0;
   }
   .card-group > .card:not(:first-child) .card-img-bottom,
-.card-group > .card:not(:first-child) .card-footer {
+  .card-group > .card:not(:first-child) .card-footer {
     border-bottom-left-radius: 0;
   }
 }
 
 /*NEWS & VIDEO*/
 .context-media {
-	isolation: isolate;
-	text-align: center; 
-	vertical-align: middle;
-	height: 320px;
+  isolation: isolate;
+  text-align: center;
+  vertical-align: middle;
+  height: 320px;
 }
 .context-all {
-	isolation: isolate;
-	text-align: center; 
-	vertical-align: middle;
-	height: 320px;
+  isolation: isolate;
+  text-align: center;
+  vertical-align: middle;
+  height: 320px;
 }
 
 /*로그인 & 회원가입*/
+
+.container-join-login {
+  flex: 0 0 auto;
+  width: 75%;
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
 .card-img-left {
   width: 45%;
   background: scroll center url('https://source.unsplash.com/collection/190727/414x512');
@@ -1433,7 +1417,6 @@ section.cta:before {
 }
 
 /* 성별 버튼 */
-
 .form-group {
   margin: 10px 0 0 10px;
 }
@@ -1528,7 +1511,7 @@ footer a:hover, footer a:active, footer a:focus {
 
 /* 테이블 */
 td {
-	color: black;
+  color: black;
 }
 
 /* 페이지 */
@@ -1654,4 +1637,11 @@ td {
   bottom: 30px;
   right: 30px;
   z-index: 9;
+}
+
+/*방명록*/
+.visit-img-left {
+  width: 45%;
+  background: scroll center url('../images/people.jpg');
+  background-size: cover;
 }
